# goldilocks-mcp

./: README.md  claude_desktop_config.json  mcp.json  pyproject.toml
goldilocks_mcp/: __init__.py  kspacing_model.py  server.py  utils.py
goldilocks_mcp/models/: alignn.py  alignn_graph.py  atom_features_utils.py  cgcnn.py  cgcnn_graph.py  compound_features_utils.py
